--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.8.1",
     "@types/node": "^18.11.18",
-    "fastify": "^4.11.0"
+    "dayjs": "^1.11.7",
+    "fastify": "^4.11.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.3.0",
